# haskell_dsl_tour

./: .gitignore  Makefile  README.md  install_all.sh  stack.yaml
Obsidian/: README.md
etc/Obsidian/: README.md
front_end/directive_driven/: DirectiveDriven.hs  directive-driven.cabal
front_end/directive_driven/Helpers/: Annotations.hs
front_end/overloading/: MiniFeldspar.cabal  OverloadingFeldspar.hs
front_end/overloading/Feldspar/: Example.hs  GADT.hs  InterpGADT.hs  Test.hs
lang_features/template_haskell/: Quotes.hs  TemplateHaskell.hs  TemplateHaskell1.hs  TemplateHaskell2.hs
middle_end/GADT_transforms/: AST.hs  GADT-CastChallenge.cabal  Mini-Accelerate.cabal  MiniAccADT.hs  MiniAccGADT.hs  Pretty.hs  Substitution.hs  Sugar.hs  Test.hs  Type.hs
middle_end/GADT_transforms/Array/: Data.hs  Sugar.hs
middle_end/GADT_transforms/src/: AST.hs  Fusion.hs  Interpreter.hs  Pretty.hs  Substitution.hs  Test.hs
middle_end/GADT_transforms/src/Array/: Data.hs  Sugar.hs
middle_end/multi-level_AST/: MiniFeldspar2.cabal
middle_end/multi-level_AST/Feldspar/: GeneratedADT.hs  InterpADT.hs  ManualADT.hs  Test2.hs  TypeCase.hs  TypeableMagic.hs
middle_end/nanopass/course_example/: grammar-list.ss  nanopass-sample.cabal
middle_end/nanopass/course_example/FrameworkHs/GenGrammars/: L00VerifyScheme.hs  L01ParseScheme.hs  L02ConvertComplexDatum.hs  L03UncoverAssigned.hs  L04PurifyLetrec.hs  L05ConvertAssignments.hs  L07RemoveAnonymousLambda.hs  L08SanitizeBindings.hs  L09UncoverFree.hs  L10ConvertClosures.hs  L12UncoverWellKnown.hs  L15IntroduceProcedurePrimitives.hs  L17LiftLetrec.hs  L18NormalizeContext.hs  L19SpecifyRepresentation.hs  L20UncoverLocals.hs  L22VerifyUil.hs  L23RemoveComplexOpera.hs  L24FlattenSet.hs  L25ImposeCallingConventions.hs  L26ExposeAllocationPointer.hs  L27UncoverFrameConflict.hs  L28PreAssignFrame.hs  L29AssignNewFrame.hs  L30FinalizeFrameLocations.hs  L32UncoverRegisterConflict.hs  L33AssignRegisters.hs  L35DiscardCallLive.hs  L36FinalizeLocations.hs  L37ExposeFrameVar.hs  L38ExposeMemoryOperands.hs  L39ExposeBasicBlocks.hs  L41FlattenProgram.hs
middle_end/nanopass/exercise/: RemoveLet.hs  grammar-list.ss  nanopass-exercise.cabal
middle_end/nanopass/exercise/FrameworkHs/: Helpers.hs  Prims.hs  SExpReader
middle_end/nanopass/exercise/FrameworkHs/GenGrammars/: MicroScheme.hs  NoLets.hs
middle_end/syntactic/: NanoFeldspar.hs  NanoFeldsparTests.hs  nanofeldspar.cabal
