name:                   MiniFeldspar
version:                0.1.0.0
build-type:             Simple
cabal-version:          >=1.10

library
  default-language:     Haskell2010
  exposed-modules:      Feldspar.GADT
                        Feldspar.Test
                        Feldspar.Example
                        Feldspar.InterpGADT
  build-depends:
      base              >= 4.7 && < 4.9
    , wl-pprint         >= 1.2
    , ghc-prim
    , deepseq

  ghc-options:          -Wall -O2
