name:                   MiniFeldspar2
version:                0.1.0.0
build-type:             Simple
cabal-version:          >=1.10

library
  default-language:     Haskell2010
  exposed-modules:
                        Feldspar.GeneratedADT
                        Feldspar.InterpADT
                        Feldspar.ManualADT
                        Feldspar.Test2
                        Feldspar.TypeCase
                        Feldspar.TypeableMagic
  other-modules:        Feldspar.GADT
                        Feldspar.Test
                        Feldspar.Example
                        Feldspar.InterpGADT
  hs-source-dirs:       ./ ../../front_end/overloading/
  build-depends:
      base              >= 4.7 && < 4.10
    , wl-pprint         >= 1.2
    , ghc-prim
    , deepseq

  ghc-options:          -Wall
