Name:                nanopass-exercise
Version:             0.0.1
Author:              Ryan R. Newton
Maintainer:          rrnewton@gmail.com
Category:            Language
Build-type:          Simple
Cabal-version:       >=1.10

Library
  Exposed-modules:

      -- We will write this simple compiler pass:
      RemoveLet

      FrameworkHs.Helpers
      FrameworkHs.Prims
      FrameworkHs.SExpReader.LispData
      FrameworkHs.SExpReader.Parser

      FrameworkHs.GenGrammars.MicroScheme
      FrameworkHs.GenGrammars.NoLets

  default-language:    Haskell2010
  build-depends:
      base == 4.*, deepseq == 1.3.*, vector >= 0.10,  containers, process, pretty,
      symbol, mtl >= 2, parsec >=3, bytestring >= 0.10, blaze-builder
